--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the code which accompanies the figures in the manuscript entitled "Dietary fiber intake and gut microbial fiber fermentation capacity are associated with favorable clinical outcomes following immune checkpoint blockade" (Guercio, Fein, et al.)
+This is the code which created the figures in the manuscript entitled "Dietary fiber intake and gut microbial fiber fermentation capacity are associated with favorable clinical outcomes following immune checkpoint blockade" (Guercio, Fein, et al.)
